--- a/pages/practiceStart/practiceStart.wxss
+++ b/pages/practiceStart/practiceStart.wxss
@@ -1,1 +1,52 @@
 /* pages/practiceStart/practiceStart.wxss */
+page {
+	height: 100%;
+}
+.practiceStartContainer {
+	height: 100%;
+	background-color: #fffffe;
+	color: #272343;
+	padding: 0 20rpx;
+}
+.header {
+	width: 100%;
+	height: 230rpx;
+	border-bottom: 1rpx solid #dbdae5;
+	display: flex;
+	align-items: center;
+}
+.header>view {
+	width: 50%;
+	text-align: center;
+	border-right: 1rpx solid #dbdae5;
+}
+.header .probability {
+	border-right: none;
+}
+.header>view .title {
+	font-size: 50rpx;
+	color: #ffd803;
+	margin-bottom: 20rpx;
+}
+.header>view .num {
+	font-size: 40rpx;
+}
+.option {
+	width: 100%;
+	height: 360rpx;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	margin-top: 220rpx;
+	align-items: center;
+}
+.option>view {
+	height: 100rpx;
+	width: 400rpx;
+
+	line-height: 100rpx;
+	border-radius: 50rpx;
+	border: 1rpx solid #272343;
+	background-color: #bae8e8;
+}
