--- a/pages/practiceStart/practiceStart.wxml
+++ b/pages/practiceStart/practiceStart.wxml
@@ -14,6 +14,6 @@
 	</view>
 	<view class="option">
 		<view class="">查看已刷题目</view>
-		<view class="">开始刷题</view>
+		<view class="" bindtap="startPractice">开始刷题</view>
 	</view>
 </view>
